--- a/css/styles.css
+++ b/css/styles.css
@@ -10907,6 +10907,10 @@ ul {
   width: 50%;
 }
 
+#kable-logo {
+  width: 35%;
+}
+
 /*container*/
 
 .container {
@@ -10915,7 +10919,8 @@ ul {
   }
 
   #list {
-    text-align: left;
+    text-align: center;
+    list-style-type: none;
   }
 
 
@@ -10934,15 +10939,18 @@ ul {
 /*Nav*/
 .navbar {
   height: 15vh;
+  display: flex;
+  flex-direction: row-reverse;
   
 }
 #nav-list {
-position:fixed;
+
+/* position:fixed;
 justify-self: center;
 margin-left: 10px;
 margin-right: 10px;
 padding-left: 10px;
-padding-right: 10px
+padding-right: 10px */
 }
 
 #navbarResponsive {
@@ -10957,8 +10965,59 @@ padding-right: 20px;
 }
 
 #photo-of-me {
-  max-width: 450px;
-  border-radius: 360px;
   display: flex;
   margin: auto;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
+
+#education {
+  text-align: center;
+  flex-direction: inherit;
+  justify-content: center;
+}
+
+#about-list {
+  text-align: left;
+}
+
+#photo-of-me {
+  max-width: 50%;
+  max-height:50%;
+  image-rendering: optimizeQuality ;
+}
+
+#containerA {
+  display: grid;
+  align-items: center; 
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 5px;
+}
+
+#my-socials {
+  flex-direction: row;
+  text-align: center;
+}
+
+#contact {
+  border: 4px solid white;
+}
+
+#contactDetails {
+  margin-left: 20px;
+  padding-left: 40px;
+}
+
+#school-title {
+  
+
+
 }
