--- a/css/styles.css
+++ b/css/styles.css
@@ -10992,13 +10992,17 @@ footer {
   text-align: center;
 }
 
-#contact {
+#Contact {
   border: 4px solid white;
 }
 
 #contactDetails {
   margin-left: 20px;
   padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
 }
 
 #Portfolio {
