--- a/css/styles.css
+++ b/css/styles.css
@@ -10828,7 +10828,7 @@ textarea.form-control-lg {
 /*BODY*/
 
 body {
-  background: url("../img/christian-holzinger-CUY_YHhCFl4-unsplash.jpg") no-repeat center center fixed;
+  background: url("../img/simone-hutsch-cMZO67R9M9c-unsplash.jpg") no-repeat center center fixed;
   background-size: cover;
 align-content: center;
 justify-content: center;
@@ -10915,7 +10915,7 @@ ul {
   z-index: 1; /* Remain at top */
   top: 0; /* Stay at the top */
   left: 0; /*no space between left and nav*/
-  background-color: gray;
+  background-color: black;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 40px;
   /* box-shadow: var(--bs-black) 5px 5px 25px; */
@@ -10945,13 +10945,13 @@ list-style: none;
 }
 
 li a:hover:not(.active) {
-  color: var(--bs-white);
+  color: #40E0D0;
 }
 
 /*mouse over, color change */
 .sidenav a:hover {
-  color: #FFF5EE;
-  background:#C4A484;
+  color: #40E0D0;
+  background: var(--bs-dark);
   
 }
 
@@ -10984,10 +10984,11 @@ a.nav-link {
 #photo-of-me {
   margin-top: 0;
   padding-top: 0;
-  height: 600px;
+  height: 400px;
   margin-bottom: 10vh;
-  margin-top: 10vh;
-  /* margin-right: 10vh; */
+  margin-top: 5vh;
+  margin-right: 30vh;
+  margin-left: 15vh;
 
   border: solid white 25px;
 }
@@ -11008,7 +11009,7 @@ body {
 
 
 footer {
-  background-color: #E0BFB8;
+  background-color: black;
   margin-bottom: 0;
   height: 25vh;
   margin-top: 0;
@@ -11192,12 +11193,9 @@ button.btn {
 /*End Work Page*/
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Optima', 'Geneva', Tahoma, sans-serif;
+  font-family: 'Geneva', Tahoma, sans-serif;
 }
 
-p {
-  font-family: 'Didot LT STD', 'Courier'
-}
 
 #madlibsp {
   border-left: solid var(--bs-gray-600) 5px;
@@ -11233,13 +11231,12 @@ p {
 /* Left column */
 .leftcolumn {
   float: left;
-  width: 55%;
-  margin-left: 20vh;
+  width: 50%;
 }
 
 /* Right column */
 .rightcolumn {
-  float: left;
+  float: right;
   width: 25%;
   padding-left: 20px;
 }
@@ -11252,11 +11249,11 @@ p {
 } */
 
 /* Add a card effect for articles */
-.card {
+/* .card {
   background-color: white;
   padding: 20px;
   margin-top: 20px;
-}
+} */
 
 /* Clear the floats after the columns */
 .row:after {
