newest layout changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -10828,7 +10828,7 @@ textarea.form-control-lg {
 /*BODY*/
 
 body {
-  background: url("../img/sebastian-svenson-d2w-_1LJioQ-unsplash.jpg") no-repeat center center fixed;
+  background: url("../img/shubham-dhage-mjl0yIdSi18-unsplash.jpg") no-repeat center center fixed;
   background-size: cover;
 align-content: center;
 justify-content: center;
@@ -10909,16 +10909,16 @@ ul {
 }
 
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  /* width: 10rem; Set the width of the sidebar */
+   height: 100%; 
+   width: 10rem; 
   position: fixed; /* (stay in place on scroll) */
-  z-index: 1; /* Remain at top */
+  z-index: 2; /* Remain at top */
   top: 0; /* Stay at the top */
   left: 0; /*no space between left and nav*/
-  background-color: black;
+  background-color: rgba(6, 0, 111, 0.76);
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 40px;
-  /* box-shadow: var(--bs-black) 5px 5px 25px; */
+  box-shadow: var(--bs-black) 5px 5px 10px;
 }
 
 .sidenav a {
@@ -10984,25 +10984,16 @@ a.nav-link {
 #photo-of-me {
   margin-top: 0;
   padding-top: 0;
-  height: 350px;
-  width: 350px;
-  margin-left: 20vh;
-  border: solid 25px;
-  border-radius: 360px;
+  /* height: 350px;
+  width: 350px;  */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
- 
-  /* align-content: flex-end; */
+  align-content: center;
 
-}
+} 
 
 #containerintro {
   margin-top: 25vh;
 }
-
-/* #containerskills {
-  margin-left: 50vh;
-  
-} */
 
 body {
   min-height: 100vh;
@@ -11011,7 +11002,7 @@ body {
 
 
 footer {
-  background-color: black;
+  background-color: rgba(6, 0, 111, 0.76);
   margin-bottom: 0;
   height: 25vh;
   margin-top: 0;
@@ -11071,7 +11062,7 @@ div {
   list-style: none;
 display:flex;
 flex-direction: row;
-align-items: flex-end;
+/* align-items: flex-end; */
 margin-left: 2.5rem;
 }
 
@@ -11080,8 +11071,8 @@ margin-left: 2.5rem;
 /*Animations*/
 .card {
   top: 50%; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background: inherit; 
+  box-shadow: 0 2px 2px 5px rgba(42, 31, 254, 0.71);
+  background: rgba(255, 255, 255, 0.4); 
   backdrop-filter: blur(25px); 
   margin: 50px; 
   text-align: center; 
@@ -11089,7 +11080,7 @@ margin-left: 2.5rem;
   width: 450px;
   border-radius: 10px;
   transition: transform 0.3s ease;
-  margin-left: 10rem;
+  /* margin-left: 10rem; */
   margin-right: 10rem;
 
 }
@@ -11101,7 +11092,7 @@ margin-left: 2.5rem;
 /*Glass pane behind*/
 #Contact {
   top: 50%; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   background: inherit; 
   backdrop-filter: blur(10px); 
   margin: 50px; 
@@ -11228,47 +11219,66 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Optima', Geneva, Tahoma, sans-serif;
   }
 
-/*Blog Style Cards*/
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {
-  float: left;
-  width: 50%;
+
+/*Nav*/
+
+#sideNav .navbar-toggler:focus {
+  outline-color: white;
 }
 
-/* Right column */
-.rightcolumn {
-  float: right;
-  width: 25%;
-  padding-left: 20px;
-}
-
-/* Fake image */
-/* .fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-} */
-
-/* Add a card effect for articles */
-/* .card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-} */
-
-/* Clear the floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
-    width: 100%;
-    padding: 0;
+@media (min-width: 992px) {
+  #sideNav {
+    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    height: 100vh;
   }
+
+  #sideNav .navbar-brand {
+    display: flex;
+    margin: auto auto 0;
+    padding: 0.5rem;
+  }
+
+  .navbar-collapse {
+    display: flex;
+    align-items: flex-start;
+    flex-grow: 0;
+    width: 100%;
+    margin-bottom: auto;
+  }
+
+  .navbar-collapse .navbar-nav {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #sideNav .navbar-collapse .navbar-nav .nav-item {
+    display: block;
+  }
+
+  #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
+    display: block;
+    color: var(--colorD);
+  }
+
+  #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link:hover {
+    display: block;
+    color: var(--colorC);
+  }
+}
+
+.avatar-img {
+  vertical-align: middle;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: solid white 4px;
+  padding: 0.5rem;
+
 }
