--- a/css/styles.css
+++ b/css/styles.css
@@ -11084,6 +11084,9 @@ button.btn {
   margin-bottom: 15vh;
   padding-bottom: 10vh;
   margin-right: 8vh;
+  margin-left: 15rem;
+  margin-right: 20rem;
+  padding-right: 10rem;
 }
 
 /* .header {
@@ -11209,6 +11212,9 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 10px; /* Add border radius */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add box shadow */
   transition: transform 0.3s ease; /* Add smooth transition */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  background: inherit; 
+  backdrop-filter: blur(10px); 
 }
 .card:hover {
   transform: translateY(-5px); /* Move card up on hover */
@@ -11294,6 +11300,8 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0 0 20px 4px rgba(0, 0, 0, 0.5) inset;
   width: 300px;
   height: 400px;
+  border: solid white 6px;
+  inset: 50%;
 
 }
 
@@ -11306,22 +11314,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.frame {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 350px;
-  height: 400px;
-  background: #d4d7dd;
-  border: 55px solid #fff;
-  box-shadow: 0 0 20px 4px rgba(0, 0, 0, 0.5) inset, 0 18px 50px 10px rgba(0, 0, 0, 0.3);
-  padding: 16px;
-  border-radius: 12px; */
-
-/* } */
 
 /*End Profile Photo*/
 
+/*Name Animated*/
 .display-2 {
   position: relative;
   font-family: sans-serif;
@@ -11344,4 +11340,13 @@ h1, h2, h3, h4, h5, h6 {
   100% {
     background-position: 500%;
   }
+}
+
+
+#education {
+  margin-bottom: 15vh; 
+  background-image: inherit; 
+  background-color:rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 4px; 
+  backdrop-filter: blur(25px); 
 }
